# rust-ffi-demo

./: Cargo.toml  Makefile  README.md  build.rs  run.sh
benches/: ffi.rs
c/: Makefile  build_on_mac.sh  mx.c  mx.h
examples/: input.json
src/: c_mx.rs  lib.rs  main.rs
