[package]
name = "rust_ffi"
version = "0.1.0"
authors = ["Sergey Mishin <sergei.a.mishin@gmail.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
bindgen = "0.45.0"

[dependencies]
libc = "0.2"
clap = "2.32.0"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"

[dev-dependencies]
criterion = "0.2.5"

[[bench]]
name = "ffi"
harness = false
